# image-resizer

./: .gitignore  README.md  build.sh  main.py  pyproject.toml
image_resizer/: image.py  request.py  response.py  storage.py
tests/: sample_request.json  test_image.py  test_image_resize.py  test_request.py  test_request_take_resizing_hint.py  test_response.py  test_storage.py  test_storage_load.py  test_storage_save.py
